# CSFML

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  license.md  license.txt  readme.md  readme.txt
.github/workflows/: ci.yml  nuget.yml  release.yml
cmake/: CompilerWarnings.cmake  Config.cmake  Format.cmake  Macros.cmake
cmake/Modules/: FindCSFML.cmake
doc/: CMakeLists.txt  doxyfile.in  doxygen.css  footer.htm  footer.html  header.htm  header.html  header.html.in  mainpage.hpp  searchOverrides.css
examples/: CMakeLists.txt  example.c
include/CSFML/: Audio.h  Config.h  GPUPreference.h  (+5 more)
src/CSFML/: CMakeLists.txt  CallbackStream.h  CallbackStream.hpp  Char32.hpp  ConvertEvent.hpp  Internal.h  Internal.hpp
src/CSFML/Audio/: CMakeLists.txt  ConvertCone.hpp  Listener.cpp  Music.cpp  MusicStruct.cpp  MusicStruct.h  MusicStruct.hpp  Sound.cpp  SoundBuffer.cpp  SoundBufferRecorder.cpp  SoundBufferRecorderStruct.h  SoundBufferRecorderStruct.hpp  SoundBufferStruct.hpp  SoundRecorder.cpp  SoundRecorderStruct.h  SoundRecorderStruct.hpp  SoundStream.cpp  SoundStreamStruct.cpp  SoundStreamStruct.h  SoundStreamStruct.hpp  SoundStruct.h  SoundStruct.hpp
src/CSFML/Graphics/: BlendMode.cpp  CMakeLists.txt  CircleShape.cpp  CircleShapeStruct.h  CircleShapeStruct.hpp  Color.cpp  ConvertColor.hpp  ConvertRect.hpp  ConvertRenderStates.hpp  ConvertStencil.hpp  ConvertTransform.hpp  ConvexShape.cpp  ConvexShapeStruct.h  ConvexShapeStruct.hpp  Font.cpp  FontStruct.h  FontStruct.hpp  Image.cpp  ImageStruct.h  ImageStruct.hpp  Rect.cpp  RectangleShape.cpp  RectangleShapeStruct.h  RectangleShapeStruct.hpp  RenderStates.cpp  RenderTexture.cpp  RenderTextureStruct.h  RenderTextureStruct.hpp  RenderWindow.cpp  RenderWindowStruct.h  RenderWindowStruct.hpp  Shader.cpp  ShaderStruct.hpp  Shape.cpp  ShapeStruct.h  ShapeStruct.hpp  Sprite.cpp  SpriteStruct.h  SpriteStruct.hpp  StencilMode.cpp  (+16 more)
src/CSFML/Main/: CMakeLists.txt  SFML_Main.cpp
src/CSFML/Network/: CMakeLists.txt  Ftp.cpp  FtpStruct.h  FtpStruct.hpp  Http.cpp  HttpStruct.hpp  IpAddress.cpp  Packet.cpp  PacketStruct.h  PacketStruct.hpp  SocketSelector.cpp  SocketSelectorStruct.h  SocketSelectorStruct.hpp  TcpListener.cpp  TcpListenerStruct.hpp  TcpSocket.cpp  TcpSocketStruct.hpp  UdpSocket.cpp  UdpSocketStruct.hpp
src/CSFML/System/: Alloc.cpp  Buffer.cpp  BufferStruct.hpp  CMakeLists.txt  Clock.cpp  ClockStruct.hpp  ConvertVector2.hpp  ConvertVector3.hpp  Sleep.cpp  Time.cpp
src/CSFML/Window/: CMakeLists.txt  Clipboard.cpp  Context.cpp  ContextSettingsInternal.hpp  ContextStruct.hpp  ConvertContextSettings.hpp  ConvertEvent.hpp  ConvertVideoMode.hpp  Cursor.cpp  CursorStruct.hpp  Joystick.cpp  Keyboard.cpp  Mouse.cpp  Sensor.cpp  Touch.cpp  VideoMode.cpp  Vulkan.cpp  Window.cpp  WindowBase.cpp  WindowBaseStruct.hpp  WindowStruct.hpp
src/SFML/: CMakeLists.txt  CallbackStream.h  CallbackStream.hpp  Char32.hpp  ConvertEvent.h  ConvertEvent.hpp  Internal.h  Internal.hpp
src/SFML/Audio/: CMakeLists.txt  Listener.cpp  Music.cpp  MusicStruct.h  MusicStruct.hpp  Sound.cpp  SoundBuffer.cpp  SoundBufferRecorder.cpp  SoundBufferRecorderStruct.h  SoundBufferRecorderStruct.hpp  SoundBufferStruct.h  SoundBufferStruct.hpp  SoundRecorder.cpp  SoundRecorderStruct.h  SoundRecorderStruct.hpp  SoundStream.cpp  SoundStreamStruct.h  SoundStreamStruct.hpp  SoundStruct.h  SoundStruct.hpp
src/SFML/Graphics/: BlendMode.cpp  CMakeLists.txt  CircleShape.cpp  CircleShapeStruct.h  CircleShapeStruct.hpp  Color.cpp  ConvertRenderStates.hpp  ConvertTransform.hpp  ConvexShape.cpp  ConvexShapeStruct.h  ConvexShapeStruct.hpp  Font.cpp  FontStruct.h  FontStruct.hpp  Image.cpp  ImageStruct.h  ImageStruct.hpp  Rect.cpp  RectangleShape.cpp  RectangleShapeStruct.h  RectangleShapeStruct.hpp  RenderImage.cpp  RenderImageStruct.h  RenderStates.cpp  RenderTexture.cpp  RenderTextureStruct.h  RenderTextureStruct.hpp  RenderWindow.cpp  RenderWindowStruct.h  RenderWindowStruct.hpp  Shader.cpp  ShaderStruct.h  ShaderStruct.hpp  Shape.cpp  ShapeStruct.h  ShapeStruct.hpp  Sprite.cpp  SpriteStruct.h  SpriteStruct.hpp  Text.cpp  (+19 more)
src/SFML/Internal/: Macros.hpp  Window.hpp
src/SFML/Main/: CMakeLists.txt  SFML_Main.cpp
src/SFML/Network/: CMakeLists.txt  Ftp.cpp  FtpStruct.h  FtpStruct.hpp  Http.cpp  HttpStruct.h  HttpStruct.hpp  IpAddress.cpp  Packet.cpp  PacketStruct.h  PacketStruct.hpp  SocketSelector.cpp  SocketSelectorStruct.h  SocketSelectorStruct.hpp  TcpListener.cpp  TcpListenerStruct.h  TcpListenerStruct.hpp  TcpSocket.cpp  TcpSocketStruct.h  TcpSocketStruct.hpp  UdpSocket.cpp  UdpSocketStruct.h  UdpSocketStruct.hpp
src/SFML/System/: Alloc.cpp  Buffer.cpp  BufferStruct.h  BufferStruct.hpp  CMakeLists.txt  Clock.cpp  ClockStruct.h  ClockStruct.hpp  Mutex.cpp  MutexStruct.h  MutexStruct.hpp  Sleep.cpp  Thread.cpp  ThreadStruct.h  ThreadStruct.hpp  Time.cpp
src/SFML/Window/: CMakeLists.txt  Clipboard.cpp  Context.cpp  ContextSettingsInternal.cpp  ContextSettingsInternal.h  ContextSettingsInternal.hpp  ContextStruct.h  ContextStruct.hpp  Cursor.cpp  CursorStruct.h  CursorStruct.hpp  Joystick.cpp  Keyboard.cpp  Mouse.cpp  Sensor.cpp  Touch.cpp  VideoMode.cpp  Vulkan.cpp  Window.cpp  WindowBase.cpp  WindowBaseStruct.h  WindowBaseStruct.hpp  WindowStruct.h  WindowStruct.hpp
test/: CMakeLists.txt
test/Audio/: Listener.test.cpp  SoundChannel.test.cpp
test/Graphics/: BlendMode.test.cpp  Color.test.cpp  CoordinateType.test.cpp  Image.test.cpp  PrimitiveType.test.cpp  Rect.test.cpp  RenderStates.test.cpp  Shape.test.cpp  StencilMode.test.cpp  Texture.test.cpp  Transform.test.cpp  VertexArray.test.cpp  View.test.cpp
test/Network/: Ftp.test.cpp  Http.test.cpp  IpAddress.test.cpp  SocketStatus.test.cpp
test/System/: Buffer.test.cpp  Clock.test.cpp  Sleep.test.cpp  Time.test.cpp  Vector2.test.cpp  Vector3.test.cpp
test/Window/: Cursor.test.cpp  Joystick.test.cpp  Keyboard.test.cpp  Mouse.test.cpp  Sensor.test.cpp  VideoMode.test.cpp  Window.test.cpp  WindowBase.test.cpp
tools/: BuildMacOS.sh  GenerateImportLibraries.ps1
(+196 files in other folders)
